--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,9 @@
 body {
+  background-color: #F7F0F5;
+  width: 100%;
+  height: 100vh;
+  font-size: 18px;
+  color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +15,23 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.button{
+  &--hover--green{
+    &:hover{
+      color: green;
+    }
+  }
+  &--hover--red{
+    &:hover{
+      color:red
+    }
+  }
+}
+.buttonGroup{
+  &>.button{
+    &+&{
+      border-left: 0;
+    }
+  }
 }
